Added initial files

--- a/Index.html
+++ b/Index.html
@@ -23,10 +23,10 @@
 
     <main id="home" class="container">
         <center>
-        <h2>Welcome to My Portfolio</h2>
-        <p>"Kung si sir cliff kay gwapo, gwapo gyapon mo hatag og grado".</p>      
+        <h1>Welcome to My Portfolio</h1>
+        <h2>"Kung si sir cliff kay gwapo, gwapo gyapon mo hatag og grado".</h2>      
         <img src="Jipot.jpg.jpg" width="1000">
-        <p>"Marshmello gani"</p>
+        <h2 style="text-decoration: cadetblue;">"Marshmello gani"</h2>
         </center>
     </main>
 
